Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47318

ApplicationWindow: item within a StackView that fills the window doesn't get correct initial size

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.6
    • Quick: Controls 2
    • None
    • 1b5abea39ed68fbd6984aa54c456fd320e1202ad

    Description

      1. Check out https://codereview.qt-project.org/#/c/121634/ and run the calendar example.
      2. Click the "+" button and the date picker will be pushed onto the StackView. It should fill to the size of the StackView, but it doesn't until you resize the window.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes