StackView: fix initialization of items

Only items that were created from pushed components were initialized.
This change fixes item initialization for StackView::initialItem and
pushed items.

Change-Id: I6fe1afa233e63320180dfe8eac3874fed69cbb3b
Task-number: QTBUG-47318
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>